gallery.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');

@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);

*,
*::before,
*::after {
  box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
ul,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
  padding: 0;
}

img,
picture {
max-width: 100%;
display: block;
}

ul[role='list'],
ol[role='list'] {
  list-style: none;
}

a:not([class]) {
    text-decoration-skip-ink: auto;
}

body {
    min-height: 100vh;
    text-rendering: optimizeSpeed;
    line-height: 1.5;
    display: flex;
    align-items: start;
    justify-content: center;
    font-family: 'Roboto', sans-serif;
    color: #fcb457;
    /*  */
}

.main {
    min-width: 20rem;
    max-width: 25rem;
    text-align: center;
}

.hero {
    padding: 1.5rem 2rem 0;
}

/* start of nav */
.navbar {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    font-family: sans-serif;
    color: #facb48;
}

.navlink > a > img {
    width: 6rem;
}

.navitems {
    display: flex;
    flex-direction: column;
    column-gap: 2rem;
    /* visibility: hidden; */
    display: none;
    align-items: end;
    padding-top: 1rem;
    font-size: 1.2em;
    font-weight: 700;
}

.navright {
    margin-left: 0;
}

.toggle {
    font-size: 1.6em;
    align-self: flex-end;
    display: initial;
    position: absolute;
    cursor: pointer;
}

.navbartoggleshow {
    display: flex;
    align-items: end;
    gap: 0.8rem;
}

.navlink > a {
    text-decoration: none;
    color: #facb48;
}

.navlink > a:hover {
    cursor: pointer;
    color: #fcda7e;
}

@media only screen and (min-width: 600px) {
    .navbar, .navitems {
        flex-direction: row;
    }

    .navbar {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        align-items: center;
    }

    .navright {
        margin-left: auto;
    }

    .navitems {
        display: flex;
        margin-left: auto;
        padding-top: 0;
        /* visibility: visible; */
        font-size: 1.28em;
    }

    .navlink > a > img {
        width: 10rem;
    }

    .toggle {
        display: none;
    }

    .navlink > a {
        color: #ffffff;
    }
    
    .navlink > a:hover {
        color: #f0fd7b;
    }
}



body{
    margin:0;
    height:100vh;
    display:grid;
    place-items: start;
    background-color: #282d31;
  }
  
  .gallery{
    position:relative;
    width:300px;
    height:250px;
    transform-style:preserve-3d;
    animation:rotate 35s linear infinite;
    margin-top: 15rem;
  }
  
  @keyframes rotate{
    from{
      transform:perspective(1200px) rotateY(0deg);
    }
    
    to{
      transform:perspective(1200px) rotateY(360deg);
    }
  }
  
  .gallery span{
    position:absolute;
    width:100%;
    height:100%;
    transform-origin:center;
    transform-style:preserve-3d;
    transform:rotateY(calc(var(--i) * 45deg)) translateZ(380px);
  }
  
  .gallery span img{
    position:absolute;
    width:100%;
    height:100%;
    object-fit:cover;
  }

@media only screen and (min-width: 600px) {
.main {
        min-width: 37.5rem;
        max-width: 90rem;
    }
  }

@media only screen and (max-width: 450px) {
    .gallery{
        margin-top: 6rem;
      }
}

